try to use jlink to to include the jre in the setup of ipscan