@@ -20,8 +20,8 @@ def platform = osName.contains("Linux") ? 'linux' + (is64 ? '64' : '32') :
                osName.contains("OS X") ? 'mac' + (isArm ? "Arm64" : "X86") : 'unknown'
 
 version = gitVersion()
-sourceCompatibility = 8
-targetCompatibility = 8
+sourceCompatibility = 11
+targetCompatibility = 11
 
 sourceSets {
     main {
@@ -302,19 +302,27 @@ task 'win-installer'(dependsOn: ['win32', 'win64']) {
         ant.get(src: "https://sourceforge.net/projects/nsis/files/NSIS%203/${nsisVersion}/${nsis}.zip/download", dest: "$installerDir/${nsis}.zip", skipexisting: 'true')
         ant.unzip(src: "${installerDir}/${nsis}.zip", dest: installerDir)
         ant.replace(file: "${installerDir}/InstallerConfig.nsh") {
-            ant.replacefilter(token: "VERSION_MINOR", value: "5")
+            ant.replacefilter(token: "VERSION_MINOR", value: "8")
             ant.replacefilter(token: "VERSION", value: version)
         }
-        ant.copy(file: "build/libs/${project.name}-win32-${version}.exe", tofile:"${installerDir}/AppFiles32/ipscan.exe")
-        ant.copy(file: "build/libs/${project.name}-win64-${version}.exe", tofile:"${installerDir}/AppFiles64/ipscan.exe")
-        if (platform.startsWith('linux')) {
-            ant.exec(dir: installerDir, executable: "wine", failOnError: true) {
-                ant.arg(value: "${nsis}/makensis.exe")
+        def jrePath = "AppFiles/jre"
+        if (!new File(installerDir, jrePath).exists()) {
+            ant.exec(dir: installerDir, executable: "jlink", failOnError: true) {
+                ("--output $jrePath --vm=client --compress=2 --no-header-files --no-man-pages --strip-debug --strip-java-debug-attributes --strip-native-debug-symbols exclude-debuginfo-files --dedup-legal-notices error-if-not-same-content " +
+                    "--add-modules java.base,java.desktop,java.prefs,java.logging")
+                    .split(" ").each { ant.arg(value: it) }
+            }
+        }
+        ant.copy(file: "build/libs/${project.name}-win64-${version}.exe", tofile:"${installerDir}/AppFiles/ipscan.exe")
+        if (platform.startsWith('win')) {
+            ant.exec(dir: installerDir, executable: "${nsis}/makensis.exe", vmlauncher: false, failOnError: true) {
                 ant.arg(value: "Installer/Installer.nsi")
             }
         }
         else {
-            ant.exec(dir: installerDir, executable: "${nsis}/makensis.exe", vmlauncher: false, failOnError: true) {
+            println("Building of Windows Installer is not supported on other platforms")
+            ant.exec(dir: installerDir, executable: "wine", failOnError: true) {
+                ant.arg(value: "${nsis}/makensis.exe")
                 ant.arg(value: "Installer/Installer.nsi")
             }
         }
